# collectarr-sync

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml  tests.yml  validate-release-config.yml
collectarr_sync/: __init__.py  config.py  db.py  main.py  schemas.py  service.py
docs/: implementation-plan.md  library-parity-contract.md  protocol-contract.md  sync.md
tests/: conftest.py  test_cors.py  test_migrations.py  test_sync.py  test_user_isolation.py
